feat(fbz): integrate reviewed zone parity uplift
Changelog: updated
Guide: n/a: FBZ handoff documentation lives under docs/s3k-zones
Known-Discrepancies: n/a: deferred FBZ acceptance gates are recorded in the zone handoff
S3K-Known-Discrepancies: n/a: deferred FBZ acceptance gates are recorded in the zone handoff
Agent-Docs: n/a: no agent policy changes
Configuration-Docs: n/a: no configuration changes
Skills: updated